New upstream version 58.0~b3